html_client/FAIR_validator.css
/* GENERALES */

input::placeholder {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 19px;
}

.container {
  width: 80%;
  padding: 0;
}

.center {
  display: grid;
  place-items: center;
}

/* TEXTOS */
.texto1 {
  font-family: Roboto;
  font-size: 32px;
  font-style: normal;
  font-weight: 400;
  line-height: 40px;
  letter-spacing: 0em;
  text-align: left;
  color: #556273;
}

.texto2 {
  font-family: Roboto;
  font-size: 24px;
  font-style: normal;
  font-weight: 400;
  line-height: 28px;
  letter-spacing: 0em;
  text-align: left;
}

.texto3 {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 22px;
  line-height: 28px;
}

.texto4 {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 19px;
}

.texto5 {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 48px;
  line-height: 56px;

  color: #000000;
}

.texto6 {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 19px;
  color: #575757;
}

.texto-check {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 22px;
  line-height: 48px;
  color: #000000;
}

.texto-principle {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 24px;
  line-height: 38px;
  color: #000000;
}

.texto-category {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 30px;
  line-height: 44px;
  text-align: center;
  color: #000000;
}

.texto-explanation {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 22px;
  color: #000000;
  padding-top: 0px !important;
}

.texto-affected {
  font-family: Roboto;
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 28px;
  color: #000000;
}

.texto-URI {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 23px;
  margin-bottom: 0.3rem;
  color: #428bca;
}

.texto-menu {
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 23px;
  color: #556273;
}

/* CAJAS */
.caja {
  width: 100%;
  background: #f5f5f5;
  border: 1px solid #000000;
  border-radius: 10px;
  padding-bottom: 0 !important; /* this should be fixed */
}

.caja-input {
  height: 180px;
}


.caja-info {
  background: #C9E1FF;
}

.caja-category {
  text-align: center;
}

.caja-check {
  margin-top: -30px !important;
  border-radius: 10px;
  box-sizing: border-box;
}

.caja-principles {
  background: #E3F0FF;
}

.caja-texto {
  background: #ffffff;
  border: 1px solid #000000;
  box-sizing: border-box;
  border-radius: 10px;
}

.caja-blanca {
  background: #ffffff;
  border: 1px solid #000000;
  box-sizing: border-box;
  border-radius: 10px;
}


.caja-affected {
  padding-left: 35px;
  margin-top: -20px;
  padding-bottom: 10px;
}

/* SELECTORES */

.selectores {
  height: 56px;
}

.selector {
  border: 1px solid #000000;
  border-top-width: 0px;

  cursor: pointer;
}

.selector:hover {
  background-color: #ddd;
}

.active {
  background-color: #C9E1FF !important;
}

.selector-izq {
  border-left-width: 0px;
  border-radius: 10px 0px 0px 0px;
}

.selector-der {
  border-right-width: 0px;
  border-radius: 0px 10px 0px 0px;
}

/* INPUTS */

.input-1 {
  width: 100%;
  border: 1px solid #000000;
  border-radius: 10px;
  padding: 10px;
}

.input-2 {
  width: 100%;
  height: 80px;
  border: 1px solid #000000; 
  border-radius: 10px;
  padding: 10px;
}

/* BOTONES */

.run {
  background: #8499B3;
  border-radius: 10px;
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 30px;
  line-height: 40px;
  color: #ffffff;
}

  dl {
    padding: 0.5em;
  }
  dt {
    float: left;
    clear: left;
    width: 130px;
    text-align: right;
    font-weight: bold;
    font-size: 20px;
 line-height: 26px;

  }
  dt::after {
    content: ":";
  }
  dd {
    margin: 0 0 0 140px;
    padding: 0 0 0.5em 0;
    font-size: 18px;
    line-height:28px;
  }


  #myBtn {
  display: none; /* Hidden by default */
  position: fixed; /* Fixed/sticky position */
  bottom: 20px; /* Place the button at the bottom of the page */
  right: 30px; /* Place the button 30px from the right */
  z-index: 99; /* Make sure it does not overlap */
  border: none; /* Remove borders */
  outline: none; /* Remove outline */
  background-color: #8499B3; /* Set a background color */
  color: white; /* Text color */
  cursor: pointer; /* Add a mouse pointer on hover */
  padding: 15px; /* Some padding */
  border-radius: 10px; /* Rounded corners */
  font-size: 18px; /* Increase font size */
}

#myBtn:hover {
  background-color: #C9E1FF; /* Add a dark-grey background on hover */
}


body{ height:100vh; margin:0; }

footer{ min-height:30px; }

/* Trick */
body{ 
  display:flex; 
  flex-direction:column; 
}

footer{
  margin-top:auto; 
}


#radarPopup {
  width: 280px;
  padding: 20px;
  font-family: Roboto;
  font-style: normal;
  font-size: 11pt;
  background-color: #F5F5F5;
  border-radius: 6px;
  position: absolute;
  display: none;
}

#radarPopup::before {
  content: "";
  width: 12px;
  height: 12px;
  transform: rotate(45deg);
  background-color: #F5F5F5;
  position: absolute;
  right: -6px;
  top: 80px;
}


#scorePopup {
  width: 280px;
  padding: 20px;
  font-family: Roboto;
  font-style: normal;
  font-size: 11pt;
  background-color: #F5F5F5;
  border-radius: 6px;
  position: absolute;
  display: none;
}

#scorePopup::before {
  content: "";
  width: 12px;
  height: 12px;
  transform: rotate(45deg);
  background-color: #F5F5F5;
  position: absolute;
  left: -6px;
  top: 80px;
}

